--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
-
+<header>
+    <nav class="navbar">
+        <a href="#home" class="logo">AmirParsa</a>
+        
+        <button class="nav-toggle" aria-label="toggle navigation">
+            <span class="hamburger"></span>
+        </button>
+        
+        <ul class="nav-list">
+            <li><a href="#home" class="nav-link">Home</a></li>
+            <li><a href="#about" class="nav-link">About Me</a></li>
+            <li><a href="#experience" class="nav-link">Experience</a></li>
+            <li><a href="#projects" class="nav-link">Projects</a></li>
+            <li><a href="#contact" class="nav-link">Contact</a></li>
+            <li><a href="link-to-your-cv.pdf" class="nav-link cv-button" target="_blank">Download CV</a></li>
+        </ul>
+    </nav>
+</header>
