--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <header>
     <nav class="navbar">
-        <a href="#home" class="logo">AmirParsa</a>
+        <a href="#home" class="logo">MohammadReza</a>
         
         <button class="nav-toggle" aria-label="toggle navigation">
             <span class="hamburger"></span>
