--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="hero-content">
             <p class="intro-text">Hello, I'm</p>
             <h1 class="name">MohammadReza Dabbagh</h1>
-            <h2 class="title">Software Engineering Student</h2>
+            <h2 class="title">CS Student at AUT</h2>
             <a href="#projects" class="cta-button">View My Work</a>
         </div>
     </section>
@@ -50,7 +50,7 @@
                 <div class="bio">
                     <h3>A little about my journey...</h3>
                     <p>
-                        I am a dedicated Software Engineering student at AUT with a strong passion for web development and problem-solving. My focus is on writing clean, efficient code and transforming ideas into functional, user-friendly applications.
+                        I am a dedicated Software Engineering student at AUT with a strong passion for web development and problem-solving. My focus is on writing clean, efficient code and transforming ideas into functional, user-friendly applications.I literally enjoy managing tech projects too!
                     </p>
                     <p>
                         I enjoy diving deep into new technologies, particularly in the realm of modern JavaScript and backend system design. My goal is to use my technical skills to contribute to impactful projects.
@@ -59,8 +59,7 @@
                     <div class="skills-list">
                         <h4>Hard Skills:</h4>
                         <ul>
-                            <li>HTML5 & CSS3</li>
-                            <li>JavaScript (ES6+)</li>
+            
                             <li>Python (Data Analysis)</li>
                             <li>Git & GitHub</li>
                             <li>Responsive Design</li>
@@ -79,7 +78,7 @@
             <div class="projects-grid">
                 
                 <div class="project-card">
-                    <img src="assets/images/project-1.jpg" alt="IoT Fridge Data Analysis Image" class="project-img">
+                    <img src="assets/images/project-1.jpg" alt="IoT Fridge Data Analysis " class="project-img">
                     <h3>IoT Fridge Data Analysis</h3>
                     <p>
                         A comprehensive data science project involving EDA, feature engineering, and classification modeling using SMOTE and LazyPredict.
@@ -93,9 +92,9 @@
 
                 <div class="project-card">
                     <img src="assets/images/project-2.jpg" alt="E-commerce Backend API Image" class="project-img">
-                    <h3>E-commerce Backend API</h3>
+                    <h3>A star algorithms with aplications</h3>
                     <p>
-                        Developed a RESTful API using Python/Django for a scalable e-commerce platform, handling user authentication, order processing, and inventory management.
+                        Lets dive into improved A*!
                     </p>
                     <div class="project-links">
                         <a href="https://github.com/mohammadreza-dabbagh/project2" target="_blank" class="link-btn">
@@ -106,9 +105,9 @@
 
                 <div class="project-card">
                     <img src="assets/images/project-3.jpg" alt="Portfolio Website Image" class="project-img">
-                    <h3>This Portfolio Website</h3>
+                    <h3>superstore optimization and segmentation</h3>
                     <p>
-                        Built a fully responsive, single-page portfolio website using only HTML, CSS, and vanilla JavaScript to showcase core front-end skills.
+                    Irantech project
                     </p>
                     <div class="project-links">
                         <a href="https://github.com/mohammadreza-dabbagh/project3" target="_blank" class="link-btn">
@@ -118,10 +117,10 @@
                 </div>
 
                 <div class="project-card">
-                    <img src="assets/images/project-4.jpg" alt="Simple C++ Game Image" class="project-img">
-                    <h3>Terminal-Based C++ Game</h3>
+                    <img src="assets/images/project-4.jpg" alt="centroid-based Object tracking" class="project-img">
+                    <h3>centroid-based Object tracking</h3>
                     <p>
-                        Implemented a simple text-based game leveraging object-oriented programming (OOP) principles and efficient data structures in C++.
+                       Irantech project2
                     </p>
                     <div class="project-links">
                         <a href="https://github.com/mohammadreza-dabbagh/project4" target="_blank" class="link-btn">
