comment in index.html

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <div class="projects-grid">
                 
                 <div class="project-card">
-                    <img src="assets/images/project-1.jpg" alt="IoT Fridge Data Analysis " class="project-img">
+                    <!-- <img src="assets/images/project-1.jpg" alt="IoT Fridge Data Analysis " class="project-img"> -->
                     <h3>IoT Fridge Data Analysis</h3>
                     <p>
                         A comprehensive data science project involving EDA, feature engineering, and classification modeling using SMOTE and LazyPredict.
@@ -91,7 +91,7 @@
                 </div>
 
                 <div class="project-card">
-                    <img src="assets/images/project-2.jpg" alt="E-commerce Backend API Image" class="project-img">
+                    <!-- <img src="assets/images/project-2.jpg" alt="E-commerce Backend API Image" class="project-img"> -->
                     <h3>A star algorithms with aplications</h3>
                     <p>
                         Lets dive into improved A*!
@@ -104,7 +104,7 @@
                 </div>
 
                 <div class="project-card">
-                    <img src="assets/images/project-3.jpg" alt="Portfolio Website Image" class="project-img">
+                    <!-- <img src="assets/images/project-3.jpg" alt="Portfolio Website Image" class="project-img"> -->
                     <h3>superstore optimization and segmentation</h3>
                     <p>
                     Irantech project
@@ -117,7 +117,7 @@
                 </div>
 
                 <div class="project-card">
-                    <img src="assets/images/project-4.jpg" alt="centroid-based Object tracking" class="project-img">
+                    <!-- <img src="assets/images/project-4.jpg" alt="centroid-based Object tracking" class="project-img"> -->
                     <h3>centroid-based Object tracking</h3>
                     <p>
                        Irantech project2
