--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             
             <div class="about-content">
                 <div class="profile">
-                    <!-- <img src="https://github.com/mohammadreza-dabbagh/personal-portfolio-website/blob/main/1753016588304.jpg" alt="MohammadReza Dabbagh Profile Picture" class="profile-img"> -->
+                    <!-- <img src="mohammadreza_dabbag.jpg" alt="MohammadReza Dabbagh Profile Picture" class="profile-img"> -->
                     <a href="https://github.com/mohammadreza-dabbagh/CV" class="btn-download" download>
                         Download CV
                     </a>
